# RustiCraft

./: Cargo.toml
src/: block_list.rs  block_uvs.rs  main.rs  rand.rs  vertices.rs
textures/eldpack/: terrain.raw  terrain.raw.swizzled
